[package]
name = "csnmp"
version = "0.3.4"
edition = "2021"
license = "CC0-1.0"
description = "Community-based async (Tokio) SNMP client library"
repository = "https://github.com/RavuAlHemio/csnmp"
readme = "README.md"
keywords = ["snmp", "async", "tokio"]

[dependencies]
from-to-repr = { version = "0.1" }
simple_asn1 = { version = "0.6" }
tokio = { version = "1.20", features = ["net", "time"] }
tracing = { version = "0.1", optional = true }
