[package]
name = "csnmp"
version = "0.5.0"
edition = "2021"
license = "CC0-1.0"
description = "Community-based async (Tokio) SNMP client library"
repository = "https://github.com/RavuAlHemio/csnmp"
readme = "README.md"
keywords = ["snmp", "async", "tokio"]

[dependencies]
derivative = { version = "2.2" }
from-to-repr = { version = "0.2" }
simple_asn1 = { version = "0.6" }
tokio = { version = "1.35", features = ["net", "time"] }
tracing = { version = "0.1", optional = true }

[dev-dependencies]
dhat = { version = "0.3" }
tokio = { version = "1.35", features = ["full"] }
tracing-subscriber = { version = "0.3" }
